--- a/project/templates/user_profile.html
+++ b/project/templates/user_profile.html
@@ -60,12 +60,12 @@
                 <div class="card">
                     <div class="card-body p-y-30 text-center">
                         <div class="wrapper">
-                            <div class="accent-1-box">a-1</div>
-                            <div class="accent-2-box">a-2</div>
-                            <div class="primary-dark-box">p-dark</div>
-                            <div class="primary-light-box">p-light</div>
+                            <div class="accent-1-box" style="background-color: {{style_guide.accent_1_color}}"></div>
+                            <div class="accent-2-box" style="background-color: {{style_guide.accent_2_color}}"></div>
+                            <div class="primary-dark-box" style="background-color: {{style_guide.primary_dark_color}}"></div>
+                            <div class="primary-light-box" style="background-color: {{style_guide.primary_light_color}}"></div>
                         </div>
-                        <a href="" class="card-title title-link primary-hover fs-20">{{ style_guide.title }}</a>
+                        <a href="/style-guide/{{style_guide.id}}" class="card-title title-link primary-hover fs-20">{{ style_guide.title }}</a>
                         <p class="fs-12 post-meta-small mt-15 mb-0"><i class="far fa-calendar-alt mr-5"></i>{{ style_guide.timestamp.strftime("%B %d, %Y") }}</p>
                     </div><!-- / card-body -->
                 </div><!-- / card -->
