fixed delete user again but delete style guide not working

--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -35,6 +35,10 @@
 
 /*-- style guide --*/
 
+button.delete-btn:hover {
+    color: red !important;
+}
+
 /* color scheme */
 .color-scheme-row {
     min-height: 200px;
