--- a/project/templates/style_guide.html
+++ b/project/templates/style_guide.html
@@ -54,6 +54,14 @@
 
 <section>
     <div class="container">
+        <div class="text-end mb-20">
+            <form method="POST" action="/style-guide/{{style_guide.id}}/delete">
+                <button class="delete-btn btn btn-sm pill btn-dark mr-5 mb-5">
+                    <i class="fas fa-trash-alt mr-5 fs-14">
+                    </i> <span>Delete Style Guide</span>
+                </button>
+            </form>
+        </div>
 
         <!-- Color Scheme Section -->
         <div class="row v-top colors-section">
